--- a/app/views/discussions/_options.html.haml
+++ b/app/views/discussions/_options.html.haml
@@ -1,14 +1,15 @@
 .dropdown#discussion-options
-  %a{href: show_print_discussion_path(discussion)}
-    %i.icon-print
-  = link_to image_tag("dropdown.png"), "#", id: "options-dropdown", class: "dropdown-toggle", 'data-toggle' => 'dropdown'
-  %ul.dropdown-menu.pull-right
-    - if can?(:edit_title, discussion)
-      %li= link_to t(:edit_discussion_title), "#", :id => "edit-title"
-    - unless @destination_groups.blank?
-      %li= link_to "Move discussion", '#move-discussion-modal', "data-toggle" => "modal", id: 'move-discussion'
-    -if can? :destroy, discussion
-      %li= link_to t(:delete_discussion), "#", 'data-method-type' => 'delete', 'data-title' => t(:delete_discussion), 'data-body' => t(:confirm_delete_discussion), 'data-confirm-path' => discussion_path(discussion), class: 'confirm-dialog', id: 'delete-discussion'
+  - if action_name != 'show_print'
+    %a{href: show_print_discussion_path(discussion)}
+      %i.icon-print
+    = link_to image_tag("dropdown.png"), "#", id: "options-dropdown", class: "dropdown-toggle", 'data-toggle' => 'dropdown'
+    %ul.dropdown-menu.pull-right
+      - if can?(:edit_title, discussion)
+        %li= link_to t(:edit_discussion_title), "#", :id => "edit-title"
+      - unless @destination_groups.blank?
+        %li= link_to "Move discussion", '#move-discussion-modal', "data-toggle" => "modal", id: 'move-discussion'
+      -if can? :destroy, discussion
+        %li= link_to t(:delete_discussion), "#", 'data-method-type' => 'delete', 'data-title' => t(:delete_discussion), 'data-body' => t(:confirm_delete_discussion), 'data-confirm-path' => discussion_path(discussion), class: 'confirm-dialog', id: 'delete-discussion'
 
 #move-discussion-modal.modal.hidden
   .modal-header
