--- a/app/views/motions/_motion.html.haml
+++ b/app/views/motions/_motion.html.haml
@@ -22,7 +22,7 @@
     .span5
       .description-body
         .js-render-as-markdown.markdown
-          = preserve motion.description
+          = preserve h(motion.description)
 
   .pie{id: "graph_#{motion.id}"}
   .percentage-to-vote
