--- a/app/views/votes/new.html.haml
+++ b/app/views/votes/new.html.haml
@@ -7,4 +7,4 @@
     .span5.offset1
       %h3 Proposal details
       .js-render-as-markdown.markdown
-        = preserve @motion.description
+        = preserve h(@motion.description)
