--- a/app/views/discussions/_description.html.haml
+++ b/app/views/discussions/_description.html.haml
@@ -1,7 +1,7 @@
 .description-container
   .description-body#discussion-description
     .js-render-as-markdown.markdown
-      = preserve description
+      = preserve h(description)
 
     - if can? :update_description, discussion
       = link_to t(:edit_discussion_context), "#", class: "edit-description edit-discussion-description bottom-panel-link", id: 'edit_description'
