--- a/app/views/discussions/_description_history.html.haml
+++ b/app/views/discussions/_description_history.html.haml
@@ -28,6 +28,6 @@
         =link_to t("description_history.next"), "#", :class => "disabled"
   .revision-content
     .js-render-as-markdown.markdown
-      = preserve @discussion.description
+      = preserve h(@discussion.description)
 .modal-footer
   = link_to t(:close), "#", "data-dismiss" => "modal", class: "btn btn-small btn-grey"
