--- a/app/views/layouts/pages.html.haml
+++ b/app/views/layouts/pages.html.haml
@@ -20,7 +20,9 @@
           .pull-right
             - if controller_name == 'pages' && (action_name == 'home' || action_name == 'about')
               =link_to 'Start a group', new_group_request_path, class: 'btn btn-success'
-            =link_to 'Sign in', new_user_session_path, class: 'btn btn-info'
+
+            - unless current_page? new_user_session_path
+              =link_to 'Sign in', new_user_session_path, class: 'btn btn-info'
           .span3 &nbsp;
           .span6
             =link_to image_tag("logo-426px-mauve-matte.png"), "/"
