--- a/app/views/devise/registrations/_persona_form.html.haml
+++ b/app/views/devise/registrations/_persona_form.html.haml
@@ -2,11 +2,7 @@
   =f.error_notification
   =f.input :name
   =f.input :email
-  -unless omniauth_authenticated_and_waiting?
-    =f.input :password
-    =f.input :password_confirmation
-  =f.input :language_preference, :collection => Translation::LANGUAGES,
-           selected: I18n.locale, include_blank: false
+  =f.input :language_preference, :collection => Translation::LANGUAGES, selected: I18n.locale, include_blank: false
 
   .terms-of-service-text=t(:terms_of_service_html, button_text: t(:"devise.registrations.sign_up"), link_path: terms_of_service_path)
   -sign_up = t(:"devise.registrations.sign_up")
