Omniauth, almost ready

--- a/app/assets/stylesheets/discussions.css.scss
+++ b/app/assets/stylesheets/discussions.css.scss
@@ -27,7 +27,7 @@ body.discussions.show {
   .form-container {
     border: 1px solid #cccccc;
     @include border-radius(4px);
-    @include box-shadow(0, 1px, 1px, rgba(0, 0, 0, 0.075) inset);
+    /*@include box-shadow(0, 1px, 1px, rgba(0, 0, 0, 0.075) inset);*/
     margin: 0 12px 0 44px;
   }
   #attachment-container {
@@ -266,7 +266,7 @@ body.discussions.show {
       width: 380px;
       &:focus {
         border-color: 0;
-        @include box-shadow(0, 0, 0, 0);
+        /*@include box-shadow(0, 0, 0, 0);*/
       }
     }
     #post-new-comment {
