--- a/app/assets/stylesheets/_mixins.scss
+++ b/app/assets/stylesheets/_mixins.scss
@@ -1,8 +1,9 @@
-@mixin box-shadow($h-offset, $v-offset, $blur-distance, $color) {
+@mixin box-shadow($h-offset, $v-offset, $blur-distance, $spread-distance, $color) {
   @each $target in -moz-box-shadow -webkit-box-shadow box-shadow {
     #{$target}: $h-offset $v-offset $blur-distance $color;
   }
 }
+
 
 @mixin border-radius($radius) {
   @each $target in -moz-border-radius -webkit-border-radius border-radius {
