proposals full view

--- a/app/views/discussions/show_print.html.haml
+++ b/app/views/discussions/show_print.html.haml
@@ -44,4 +44,4 @@
                   = render closed_motion, this_group: @group
               - else
                 %li.selector-item
-                  = render '/motions/motion_preview', motion: closed_motion, this_group: @group
+                  = render '/motions/motion', motion: closed_motion, this_group: @group
