--- a/app/views/comments/_comment_likes.html.haml
+++ b/app/views/comments/_comment_likes.html.haml
@@ -1,15 +1,17 @@
 .activity-item-time
-  = link_to(t('ago', :quantity_of_time => time_ago_in_words(comment.created_at)), "#comment-#{comment.id}")
-  - if @can_like_comments ||= can?(:like_comments, @discussion)
-    = " · "
-    - if comment.likers_include?(current_user)
-      = link_to t(:unlike), like_comment_path(id: comment, like: 'false'), method: :post, remote: true, id: "unlike-comment-#{comment.id}"
-    - else
-      = link_to t(:like), like_comment_path(id: comment, like: 'true'), method: :post, remote: true, id: "like-comment-#{comment.id}"
+  - if action_name != 'show_print'
+    = link_to(t('ago', :quantity_of_time => time_ago_in_words(comment.created_at)), "#comment-#{comment.id}")
+    - if @can_like_comments ||= can?(:like_comments, @discussion)
+      = " · "
+      - if comment.likers_include?(current_user)
+        = link_to t(:unlike), like_comment_path(id: comment, like: 'false'), method: :post, remote: true, id: "unlike-comment-#{comment.id}"
+      - else
+        = link_to t(:like), like_comment_path(id: comment, like: 'true'), method: :post, remote: true, id: "like-comment-#{comment.id}"
+  - else
+    - time_tag((comment.created_at), "#comment-#{comment.id}")
   - if can? :destroy, comment
     = " · "
     = link_to t(:delete), "#", 'data-title' => t(:delete_comment), 'data-body' => t(:confirm_delete_comment), 'data-confirm-path' => comment_path(comment), 'data-method-type' => 'delete', class: 'confirm-dialog', id: "delete-comment-#{comment.id}"
-
 - if comment.liker_ids_and_names.size > 0
   .activity-item-likes
     - liker_links = comment.liker_ids_and_names.map { |id, name| link_to(name, user_path(id)) }
