--- a/app/views/discussions/show_print.html.haml
+++ b/app/views/discussions/show_print.html.haml
@@ -38,10 +38,6 @@
             = t :previous_decisions
         .content-proposal-body
           %ul.selector-list
-            - @discussion.closed_motions.each do |closed_motion|
-              - if closed_motion == @displayed_motion
-                %li.selector-item
-                  = render closed_motion, this_group: @group
-              - else
-                %li.selector-item
-                  = render '/motions/motion', motion: closed_motion, this_group: @group
+          - @discussion.motions.each do |motion|
+            %li.selector-item
+              = render motion, this_group: @group
