--- a/app/views/comments/_comment_likes.html.haml
+++ b/app/views/comments/_comment_likes.html.haml
@@ -8,7 +8,8 @@
       - else
         = link_to t(:like), like_comment_path(id: comment, like: 'true'), method: :post, remote: true, id: "like-comment-#{comment.id}"
   - else
-    - time_tag((comment.created_at), "#comment-#{comment.id}")
+    = link_to(t('ago', :quantity_of_time => time_ago_in_words(comment.created_at)), "#comment-#{comment.id}")
+
   - if can? :destroy, comment
     = " · "
     = link_to t(:delete), "#", 'data-title' => t(:delete_comment), 'data-body' => t(:confirm_delete_comment), 'data-confirm-path' => comment_path(comment), 'data-method-type' => 'delete', class: 'confirm-dialog', id: "delete-comment-#{comment.id}"
