--- a/app/views/devise/shared/_omniauth_buttons.html.haml
+++ b/app/views/devise/shared/_omniauth_buttons.html.haml
@@ -28,7 +28,7 @@
           $('input[name=assertion]').val(assertion);
           $('#persona_form').submit();
         } else {
-          window.location = "#{root_url}"
+          window.location = "#{new_user_session_url}"
         }
       });
     }
