render md in js for discussion activity

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -22,6 +22,7 @@
       = render 'flash_messages', :flash => flash, :on_landing_page => false
       .page-container
         = yield
+        #markdown-help-container
       = render 'footer_logged_in'
 
     = render 'analytics'
