--- a/app/views/discussions/_add_comment.html.haml
+++ b/app/views/discussions/_add_comment.html.haml
@@ -10,6 +10,9 @@
         = hidden_field_tag 'uses_markdown', @uses_markdown, {id: 'global-uses-markdown'}
         = submit_tag t(:comment_form_submit_button), class: "btn btn-small submit", id: 'post-new-comment', :data => {:disable_with => t(:comment_form_submit_button)}
       .comment-toolbar
+        %a#show-markdown-help{href: '#'}
+          %i.icon-question-sign
+
         -unless browser.ie? && browser.version.to_i < 10
           .attachment-icon#add-attachment-icon
         .dropdown#comment-markdown-dropdown.global-markdown-setting
