--- a/app/views/discussions/add_comment.js.erb
+++ b/app/views/discussions/add_comment.js.erb
@@ -1,6 +1,6 @@
 $("#new-comment").val('');
-$("ul#activity-list").append("<li class='activity-item-container'><%=escape_javascript(render @comment)%></li>");
+$("ul#activity-list").append("<li class='activity-item-container'><%= j render @comment %></li>");
 $(".empty-list-message").remove()
-
 $('.attachment-success').remove()
 $('#new-comment-form').find("input[name='attachments[]']").remove()
+ClientsideMarkdown.render($('.activity-item-container').last())
