--- a/app/assets/stylesheets/groups/public_groups.css.scss
+++ b/app/assets/stylesheets/groups/public_groups.css.scss
@@ -1,25 +1,62 @@
+@import "bootstrap/mixins";
+@import "settings";
+@import "mixins";
+
 body.public_groups {
   &.index, &.find {
-    table {
-      width: 100%;
-      form {
-        margin-bottom: 0;
-        .control-group {
-          display: inline-block;
-          margin-bottom: 0px;
-        }
-        #query {
-          width: 200px;
+    .btn { margin-left: 10px; }
+    .add-on {
+      background-color: transparent;
+      position: relative;
+      border-left: 0;
+    }
+    form {
+      margin-bottom: 0;
+      .control-group {
+        display: inline-block;
+        margin-bottom: 0px;
+      }
+      #query {
+        @include border-radius(4px);
+        -moz-border-top-right-radius: 0;
+          -webkit-border-top-right-radius: 0;
+          border-top-right-radius: 0;
+        -moz-border-bottom-right-radius: 0;
+          -webkit-border-bottom-right-radius: 0;
+          border-bottom-right-radius: 0;
+        width: 200px;
+        border-right: 0;
+        &:focus {
+          border: 1px solid #cccccc;
+          border-right: 0;
+          @include box-shadow(0,0,0,0, transparent);
         }
       }
-      th { text-align: left; }
+      .submit-search {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 26px;
+        opacity: 0;
+      }
+    }
+
+    table {
+      width: 100%;
+      th {
+        font-size: 20px;
+        padding: 15px 10px;
+        width: 80%;
+        &.members { text-align: right; }
+      }
+
       td.group {
         padding: 10px;
         .group-name { font-weight: bold; }
       }
       td.members {
-        padding-left: 30px;
-        width: 20px;
+        padding-right: 75px;
+        text-align: right;
       }
     }
   }
