--- a/app/views/groups/public_groups/index.html.haml
+++ b/app/views/groups/public_groups/index.html.haml
@@ -1,11 +1,12 @@
-%h1 Public groups directory
-
-.input-append
-  = form_tag public_groups_path, method: 'get', class: 'form-search' do |f|
-    = text_field_tag :query, params[:query], class: 'search-query'
-    .add-on
-      %i.icon-search
-        = submit_tag "", class: 'submit-search'
+.row-fluid
+  .span8
+    %h1 Public groups directory
+  .input-append
+    = form_tag public_groups_path, method: 'get', class: 'form-search' do |f|
+      = text_field_tag :query, params[:query], class: 'search-query'
+      .add-on
+        %i.icon-search
+          = submit_tag "", class: 'submit-search'
 
 
 %table.table.table-striped#directory
@@ -25,8 +26,8 @@
     - @groups.each do |group|
       %tr
         %td.group
-          = link_to group.full_name, group_path(group), class: 'group-name'
-          = " - #{group.description}" if group.description.present?
+          = link_to group.full_name + " #{group.description if group.description.present?}", group_path(group), class: 'group-name'
+          / = " - #{group.description}" if group.description.present?
         %td.members
           = group.memberships_count
 
