center frontpage text and video

--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -203,7 +203,7 @@ a.btn-icon:hover { color: $dark-grey; }
     .no-bottom-margin{
       margin-bottom: 0px;
     }
-    .homevideo { text-align: left }
+    #hero-content { text-align: center; }
     .featured-row {
       margin-bottom: 1em;
       h3 {
