--- a/app/views/pages/home.html.haml
+++ b/app/views/pages/home.html.haml
@@ -1,7 +1,7 @@
 .container
   %section.first
     .inner-container
-      .row-fluid
+      .row-fluid#hero-content
         .span6.homevideo
           <iframe class="no-bottom-margin" src="https://player.vimeo.com/video/52025402?title=0&amp;byline=0&amp;portrait=0&amp;badge=0" width="383" height="287" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
         .span6
